<resources>
    <string name="app_name">Unit Converter</string>
    <string name="clear_button">Clear</string>
    <string name="convert_button">Convert</string>
    <string name="enter_unit_values">Enter Values</string>
    <string name="celsius_value_field">Celsius</string>
    <string name="fahrenheit_value_field">Fahrenheit</string>
    <string name="convert_results">%1$s</string>
    <string name="fahrenheit_image_button">fahrenheit_image_button</string>
    <string name="celsius_image_button">celsius_image_button</string>
</resources>